Fix Bouncing Spacing

--- a/choheron.github.io/src/css/homepage.css
+++ b/choheron.github.io/src/css/homepage.css
@@ -9,7 +9,7 @@
 }
 
 @keyframes upDown {
-    to { transform: translateY(-20%);}
+    to { transform: translateY(-4vh);}
 }
 
 .application {
